--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,7 +1,24 @@
-.hero-bg {
-    background-color: #03A29A;
+.hero-section {
+    position: relative;
+    width: 100%;
+    height: 500px;
+    background: url("https://img.freepik.com/free-photo/little-indonesian-girl-child-portrait-closeup_1321-2628.jpg?t=st=1740805157~exp=1740808757~hmac=7b680d1a971c108d8205ef39173d7187ec455c43596cc3fb66359da4d207cda6&w=1060") no-repeat center center/cover;
 }
 
-.border {
-    border-top: 2px solid white;
+.hero-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.4);
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: 5%;
+}
+
+.hero-text {
+    max-width: 500px;
+    color: #004085;
 }
